Fix TaskScheduler